<resources>
    <string name="app_name">COOK.it</string>
    <string name="preparation_time">Preparation time: %1$s</string>
    <string name="cooking_time">Cooking time: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chintan_parmar">Chintan Parmar</string>
    <string name="developed_by">Developed by</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="about">About</string>
    <string name="time_to_cook">Time to Cook!</string>
    <string name="cook_notification_channel_id">cook_it</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
</resources>