<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_black_arrow"
        app:title="@string/about" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.065" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.944" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/appNameTv"
        style="@style/Headline34dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/topGuide" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?colorPrimary"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/appNameTv"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/version"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/versionTv"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/_1_0_0"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/developed_by"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/versionTv" />

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/chintan_parmar"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>